--- a/views/partials/_navigation.ejs
+++ b/views/partials/_navigation.ejs
@@ -1,18 +1,75 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Freelancer - Start Bootstrap Theme</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
+<!-- Navigation-->
+<nav
+  class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top"
+  id="mainNav">
+  <div class="container">
+    <% if (page_name === 'index') { %>
+      <a class="navbar-brand" href="/#start">Freelancer</a>
+    <% } %>
+    <% if (page_name === 'admin') { %>
+      <a class="navbar-brand" href="/#start">Freelancer</a>
+    <% } %>
+    <button
+      class="
+        navbar-toggler
+        text-uppercase
+        font-weight-bold
+        bg-primary
+        text-white
+        rounded
+      "
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarResponsive"
+      aria-controls="navbarResponsive"
+      aria-expanded="false"
+      aria-label="Toggle navigation">
+      Menu
+      <i class="fas fa-bars"></i>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ms-auto">
+        <% if (page_name === 'index') { %>
+        <li class="nav-item mx-0 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#start">Start</a>
+        </li>
+        <% } %>
+        <% if (page_name === 'admin') { %> 
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Edit Portfolio</a>
+          </li>
+        <% } %>
+        <% if (page_name === 'index') { %> 
+        <li class="nav-item mx-0 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#portfolio">Portfolio</a>
+        </li>
+        <% } %>
+        <% if (page_name === 'index') { %> 
+        <li class="nav-item mx-0 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#about">About</a>
+        </li>
+        <% } %>
+        <% if (page_name === 'index') { %>        
+        <li class="nav-item mx-0 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="#contact">Contact</a>
+        </li>
+        <% } %>
+        <% if (page_name === 'index' && userIN) { %>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded" href="/admin"><i class="fas fa-user-cog"></i> </a>
+          </li>
+        <% } %>         
+        <% if(!userIN) { %>   
+        <li class="nav-item mx-0 mx-lg-1">
+          <a class="portfolio-item nav-link py-3 px-0 px-lg-3 rounded" href="/#" data-bs-toggle="modal" data-bs-target="#loginModal"><i class="fas fa-sign-in-alt"></i></a>
+        </li>
+        <% } %>
+        <% if(userIN) { %>
+        <li class="nav-item mx-0 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded" href="/logout"><i class="fas fa-sign-out-alt"></i></a>
+        </li>                    
+        <% } %>
+      </ul>
+    </div>
+  </div>
+</nav>
